--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -1,3 +1,8 @@
 <header>
-    <h1>Header Component </h1>
+    <div class="logo">
+        <p>logo</p>
+    </div>
+    <div class="cart">
+        <p>cart </p>
+    </div>
 </header>
