Include icons and edit header

--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -1,8 +1,13 @@
 <header>
     <div class="logo">
-        <p>logo</p>
+        <img src="/images/logo.png" alt="MundiPagg">
+        <div class="logo-description">
+            <span>mundi</span>
+            <span>lib</span>
+        </div>
     </div>
     <div class="cart">
-        <p>cart </p>
+        <img src="/images/cart-icon.png">
+        <span class="label">2</span>
     </div>
 </header>
