--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,5 @@
-// @import "settings";
-// @import "../../bower_components/foundation/scss/foundation";
-//  @import "base";
+body {
+    margin: 0 auto;
+    padding: 0;
+    font-family: 'Exo 2', sans-serif;
+}
