--- a/app/components/home.html
+++ b/app/components/home.html
@@ -1,5 +1,5 @@
 <!-- comment -->
 <div header-component></div>
-<div slider-component></div>
+<div banner-component></div>
 <div list-component></div>
 <div footer-component></div>
