--- a/app/components/banner/banner.scss
+++ b/app/components/banner/banner.scss
@@ -2,16 +2,15 @@
 
 section.banner {
 
-    .image, .description {
+    img {
         position: absolute;
     }
 
     .description {
+        position: relative;
         display: flex;
         flex-direction: column;
-        height: 100%;
-        justify-content: center;
-        padding: 0 100px;
+        padding: 10%;
         color: white;
 
         .except {
