--- a/app/components/list/list.html
+++ b/app/components/list/list.html
@@ -1,10 +1,73 @@
 <section>
-    <ul>
-        <li>
-            teste 1
-        </li>
-        <li>
-            teste 2
-        </li>
-    </ul>
+    <div class="list-books">
+        <div class="book">
+            <div class="content">
+                <div class="image">
+                    <img src="http://lorempixel.com/200/300/" alt="lorenpixel">
+                </div>
+                <div class="description">
+                    <div class="title">Título do livro</div>
+                    <div class="author">Autor do livro</div>
+                    <div class="price">R$99,99</div>
+                </div>
+            </div>
+            <button class="button submit">adicionar ao carrinho</button>
+        </div>
+
+        <div class="book">
+            <div class="content">
+                <div class="image">
+                    <img src="http://lorempixel.com/200/300/" alt="lorenpixel">
+                </div>
+                <div class="description">
+                    <div class="title">Título do livro</div>
+                    <div class="author">Autor do livro</div>
+                    <div class="price">R$99,99</div>
+                </div>
+            </div>
+            <button class="button submit">adicionar ao carrinho</button>
+        </div>
+
+        <div class="book">
+            <div class="content">
+                <div class="image">
+                    <img src="http://lorempixel.com/200/300/" alt="lorenpixel">
+                </div>
+                <div class="description">
+                    <div class="title">Título do livro</div>
+                    <div class="author">Autor do livro</div>
+                    <div class="price">R$99,99</div>
+                </div>
+            </div>
+            <button class="button submit">adicionar ao carrinho</button>
+        </div>
+
+        <div class="book">
+            <div class="content">
+                <div class="image">
+                    <img src="http://lorempixel.com/200/300/" alt="lorenpixel">
+                </div>
+                <div class="description">
+                    <div class="title">Título do livro</div>
+                    <div class="author">Autor do livro</div>
+                    <div class="price">R$99,99</div>
+                </div>
+            </div>
+            <button class="button submit">adicionar ao carrinho</button>
+        </div>
+
+        <div class="book">
+            <div class="content">
+                <div class="image">
+                    <img src="http://lorempixel.com/200/300/" alt="lorenpixel">
+                </div>
+                <div class="description">
+                    <div class="title">Título do livro</div>
+                    <div class="author">Autor do livro</div>
+                    <div class="price">R$99,99</div>
+                </div>
+            </div>
+            <button class="button submit">adicionar ao carrinho</button>
+        </div>
+    </div>
 </section>
