--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,19 @@
+@import "base";
+
 body {
     margin: 0 auto;
     padding: 0;
     font-family: 'Exo 2', sans-serif;
+}
+
+.button {
+    border: 0;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 18px;
+
+    &.submit {
+        background-color: $secondary-color;
+        color: white;
+    }
 }
