--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -1,1 +1,8 @@
 @import "../../styles/base";
+
+footer {
+    margin-top: 50px;
+    background-color: $primary-color;
+    color: white;
+    padding: 20px 10px;
+}
