Adjust banner, list and header

--- a/app/components/banner/banner.html
+++ b/app/components/banner/banner.html
@@ -2,7 +2,7 @@
     <div class="image">
         <img src="/images/banner.png" alt="Desconto para livros do Martin Flower">
         <div class="description">
-            <span class="title">Desconto nos livros do Martin Fower</span>
+            <span class="title">Martin Fower com desconto</span>
             <span class="subtitle">Utilize o cupom de desconto <span class="except">TrabalheNaMundi</span> e ganhe 10% de desconto nos livros do <strong>Martin Fower</strong>. Aproveite!</span>
         </div>
     </div>
