--- a/app/components/list/list.scss
+++ b/app/components/list/list.scss
@@ -6,6 +6,7 @@
     grid-column-gap: 10px;
     grid-row-gap: 10px;
     margin: 0 14%;
+    padding-top: 60px; 
 
     .book {
         display: flex;
