--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -3,7 +3,7 @@
         <img src="/images/logo.png" alt="MundiPagg">
         <div class="logo-description">
             <span>mundi</span>
-            <span>lib</span>
+            <span>book</span>
         </div>
     </div>
     <div class="cart">
