--- a/app/components/footer/footer.html
+++ b/app/components/footer/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <span>Copyright © MundiLib - Todos os direitos reservados</span>
+    <span>Copyright © MundiBook - Todos os direitos reservados</span>
 </footer>
