--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -1,13 +1,13 @@
 <header>
-    <div class="logo">
+    <a ui-sref="home" class="logo">
         <img src="/images/logo.png" alt="MundiPagg">
         <div class="logo-description">
             <span>mundi</span>
             <span>book</span>
         </div>
-    </div>
-    <div class="cart">
+    </a>
+    <a ui-sref="cart" class="cart">
         <img src="/images/cart-icon.png">
         <span class="label">2</span>
-    </div>
+    </a>
 </header>
