--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -7,6 +7,8 @@ header {
 
     .logo {
         display: flex;
+        text-decoration: none;
+        
         img {
             height: 3em;
             padding: 5px 10px;
