--- a/app/components/list/list.scss
+++ b/app/components/list/list.scss
@@ -4,19 +4,21 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 10px;
-    grid-row-gap: 10px;
+    grid-row-gap: 50px;
     margin: 0 14%;
     padding-top: 60px; 
 
     .book {
         display: flex;
         flex-direction: column;
+        align-items: center;
         padding: 20px;
 
         .content {
             display: flex;
             justify-content: center;
             align-items: center;
+            margin-bottom: 30px;
 
             .image img {
                 max-width: 100px;
@@ -38,7 +40,7 @@
         }
 
         .button {
-
+            width: 90%;
         }
     }
 }
