--- a/app/components/list/list.html
+++ b/app/components/list/list.html
@@ -1,73 +1,21 @@
 <section>
     <div class="list-books">
-        <div class="book">
+        
+        <div class="book" ng-repeat="book in library">
             <div class="content">
                 <div class="image">
-                    <img src="http://lorempixel.com/200/300/" alt="lorenpixel">
+                    <img src="{{ book.image }}" alt="{{ book.name }}">
                 </div>
                 <div class="description">
-                    <div class="title">Título do livro</div>
-                    <div class="author">Autor do livro</div>
-                    <div class="price">R$99,99</div>
+                    <a href="/" title="{{ book.name }}">
+                        <div class="title">{{ book.name }}</div>
+                    </a>
+                    <div class="author">{{ book.author }}</div>
+                    <div class="price">{{ book.price }}</div>
                 </div>
             </div>
             <button class="button submit">adicionar ao carrinho</button>
         </div>
 
-        <div class="book">
-            <div class="content">
-                <div class="image">
-                    <img src="http://lorempixel.com/200/300/" alt="lorenpixel">
-                </div>
-                <div class="description">
-                    <div class="title">Título do livro</div>
-                    <div class="author">Autor do livro</div>
-                    <div class="price">R$99,99</div>
-                </div>
-            </div>
-            <button class="button submit">adicionar ao carrinho</button>
-        </div>
-
-        <div class="book">
-            <div class="content">
-                <div class="image">
-                    <img src="http://lorempixel.com/200/300/" alt="lorenpixel">
-                </div>
-                <div class="description">
-                    <div class="title">Título do livro</div>
-                    <div class="author">Autor do livro</div>
-                    <div class="price">R$99,99</div>
-                </div>
-            </div>
-            <button class="button submit">adicionar ao carrinho</button>
-        </div>
-
-        <div class="book">
-            <div class="content">
-                <div class="image">
-                    <img src="http://lorempixel.com/200/300/" alt="lorenpixel">
-                </div>
-                <div class="description">
-                    <div class="title">Título do livro</div>
-                    <div class="author">Autor do livro</div>
-                    <div class="price">R$99,99</div>
-                </div>
-            </div>
-            <button class="button submit">adicionar ao carrinho</button>
-        </div>
-
-        <div class="book">
-            <div class="content">
-                <div class="image">
-                    <img src="http://lorempixel.com/200/300/" alt="lorenpixel">
-                </div>
-                <div class="description">
-                    <div class="title">Título do livro</div>
-                    <div class="author">Autor do livro</div>
-                    <div class="price">R$99,99</div>
-                </div>
-            </div>
-            <button class="button submit">adicionar ao carrinho</button>
-        </div>
     </div>
 </section>
