--- a/app/components/list/list.scss
+++ b/app/components/list/list.scss
@@ -17,19 +17,30 @@
         .content {
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;
             margin-bottom: 30px;
 
             .image img {
                 max-width: 100px;
+                max-height: 140px;
             }
 
             .description {
                 padding: 10px;
 
+                a {
+                    text-decoration: none;
+                    color: black;
+                }
+
                 .title {
                     font-size: 20px;
                     font-weight: bold;
+                    overflow: hidden;
+                    max-height: 50px;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 2;
+                    -webkit-box-orient: vertical;
                 }
 
                 .price {
